--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 body{
+  background-image:url('\pattern-background-desktop.svg');
   background-color: #C8D3F9;
+  /* flex-direction: row-reverse;
+  justify-content: center; */
+  /* display: flex; */
+
 }
 .card{
   background-color: white;
@@ -8,15 +13,22 @@ body{
   border-radius:  25px ;
 
 }
+img{
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 25px 25px 0 0;
+  display: block; /* remove extra space below image */
+}
 
-.upcard
+.card-top
 {
   background-color:  #234CD4;
-  height: 200px;
+  height: 170px;
+  width: 350px;
   border-radius: 25px 25px 0 0;
 
 }
-.botcard{
+.card-bottom{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,14 +36,20 @@ body{
   justify-content: space-between;
 
 }
-.plancard{
-background-color: #F0F2FB;
+.card-plan{
+background-color: #F4FCFD;
 height: 100px;
 width: 300px;
-border-radius:  9px ;
-
+border-radius:  9px;
+color: gray;
+/* border-bottom: 50px; */
+margin-bottom: 30px;
+margin-left: 25px;
 }
-.paybutton
+.btn-pay:hover{
+  background-color: #6472EF;
+}
+.btn-pay
 {
   background-color: #F0F2FB;
 
@@ -41,14 +59,21 @@ border-radius:  9px ;
   height: 50px;
   width: 300px;
   border-radius:  9px ;
-  border: none;
+  margin-left: 25px;
   color: white;
 }
-.canbutton
+.btn-cancel
 {
   text-align: center;
   background-color: white;
+  color: gray;
   height: 50px;
   width: 300px;
   border: none;
+  margin-left: 25px;
+}
+.btn-cancel:hover{
+  color: black;
+  font-weight: bold;
+  cursor: url(images/droplet.svg), auto;
 }
