--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,21 @@
 body{
   background-image:url('\pattern-background-desktop.svg');
-  background-color: #C8D3F9;
-  /* flex-direction: row-reverse;
-  justify-content: center; */
-  /* display: flex; */
-
+  background-repeat: no-repeat;
+  background-color: #A6F5FF;
 }
 .card{
   background-color: white;
   width:350px;
-  min-height: 600px;
+  height: 600px;
   border-radius:  25px ;
-
+  position: absolute;
+  top:50px; left: 600px;
 }
 img{
   max-width: 100%;
   max-height: 100%;
   border-radius: 25px 25px 0 0;
-  display: block; /* remove extra space below image */
+  display: block; /
 }
 
 .card-top
@@ -40,14 +38,32 @@ img{
 background-color: #F4FCFD;
 height: 100px;
 width: 300px;
-border-radius:  9px;
+border-radius: 9px;
 color: gray;
-/* border-bottom: 50px; */
 margin-bottom: 30px;
 margin-left: 25px;
 }
+.music{
+  position: relative;
+  top: 20px;
+  left: 20px;
+}
+.table{
+  position: relative;
+  left: 90px;
+  top: -30px;
+}
 .btn-pay:hover{
   background-color: #6472EF;
+}
+.link{
+  position: relative;
+  top: -60px;
+  left: 220px;
+}
+.link:hover{
+  color: #6472EF;
+  text-decoration: none;
 }
 .btn-pay
 {
@@ -58,7 +74,7 @@ margin-left: 25px;
   margin: 4px 2px;
   height: 50px;
   width: 300px;
-  border-radius:  9px ;
+  border-radius: 9px;
   margin-left: 25px;
   color: white;
 }
